# flashlight-text

./: .gitignore  README.md  pyproject.toml  setup.py
.github/workflows/: build_wheels.yml
bindings/python/flashlight/lib/text/: _decoder.cpp
