[build-system]
requires = ["ufal.kenlm", "setuptools", "wheel", "cmake<=3.30"]

[tool.cibuildwheel]
before-build = "pip install git+https://github.com/foxik/kenlm"

[tool.cibuildwheel.linux]
repair-wheel-command = """
SITE_PKG=$(python -c "import site; print(site.getsitepackages()[0])") && \
LD_LIBRARY_PATH="$SITE_PKG:$SITE_PKG/ufal_kenlm.libs:$LD_LIBRARY_PATH" auditwheel repair -w {dest_dir} {wheel}
"""

[tool.cibuildwheel.macos]
repair-wheel-command = """
SITE_PKG=$(python -c "import site; print(site.getsitepackages()[0])") && \
DYLD_LIBRARY_PATH="$SITE_PKG:$DYLD_LIBRARY_PATH" delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}
"""
